# astronomore

./: .gitignore  CLAUDE.md  Cargo.toml  Justfile  README.md  index.html
.githooks/: pre-commit
.github/workflows/: pages.yml
docs/: JOURNAL.md  STATUS-2026-06-10.md  claude-code-review.md  draw-flow.html  opengl-wgpu-analysis.md  opengl-wgpu-mapping.html  vl_slides.md
perf/: bench-report.html  bench-report.md  benchmarks.md  benchmarks.ndjson  range-results.ndjson
scripts/: bench-range.py  bench-record.py  bench-report.py
src/: arrow.rs  camera.rs  celestial_body.rs  gpu.rs  grid.rs  lib.rs  loader.rs  main.rs  mesh.rs  orbital.rs  pipelines.rs  planets.rs  scene.rs  scene_properties.rs  shader.wgsl  shader_loader.rs  sim.rs  texture.rs  transform.rs  ui.rs  web_ui.rs
src/.github/workflows/: pages.yml
src/shaders/: grid.wgsl  normals.wgsl  shader.wgsl
