[package]
name = "astronomore"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
strip = true

[dependencies]
tracing = "0.1.44"
pollster = "0.4.0"
wgpu = "29.0.3"
winit = { version = "0.30.13", features = ["android-native-activity"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
miette = { version = "7.6.0" }
console_error_panic_hook = "0.1.6"
wasm-tracing = "2.1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wgpu = { version = "29.0.3", features = ["webgl"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
miette = { version = "7.6.0", features = ["fancy"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "tracing-log"] }
