[package]
name = "astronomore"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]

[dependencies]
tracing = "0.1.44"
pollster = "0.4.0"
wgpu = "29.0.3"
winit = { version = "0.30.13", features = ["android-native-activity"] }
bytemuck = { version = "1.25.0", features = ["derive"] }
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg"] }
glam = "0.32.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
miette = { version = "7.6.0" }
console_error_panic_hook = "0.1.6"
wasm-tracing = "2.1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wgpu = { version = "29.0.3", features = ["webgl"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
miette = { version = "7.6.0", features = ["fancy"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "tracing-log"] }
